# 42porto

./: .ft_itoa.c.swp  .teste.c.swp  Makefile  a.out  ft_atoi.c  ft_calloc.c  ft_isalnum.c  ft_itoa.c  ft_lstadd_front.c  ft_lstmap.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_split.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h  libft.h.gch
Fly-in/: requirements.txt
Fly-in/src/: main.py
Libft/: Makefile  ft_calloc.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstsize.c  ft_memcmp.c  ft_putendl_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c
Python/Module06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
Python/Module08/ex1/: loading.py  pyproject.toml
ft_printf/: Makefile  README.md  ft_printf.c  ft_printf.h  ft_printf_utils.c
get_next_line/: README.md  example.txt  get_next_line.c  get_next_line.h  get_next_line_utils.c  main.c  teste.txt
push_swap/: .push_swap.c.swp  Makefile  README.md  a.out  algho.c  create_stack.c  ft_chunk.c  ft_ckunk.c  index.c  push_swap  push_swap.c  push_swap.h  push_swap.h.gch  sort.c
(+102 files in other folders)
