[project]
name = "teste"
version = "0.1.0"
description = "teste poetry"
authors = [
    {name = "Fabio Reis"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.2"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
